# pa193-project

./: .codacy.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  main.yml
Parser/: CMakeLists.txt
Parser/Parser/: CMakeLists.txt  parser.cpp  parser.h  tests.cpp
dataset/: 0782V5b_pdf.json  0782V5b_pdf.txt  0879V4a_pdf.json  0939V3b_pdf.json  0939V3b_pdf.txt  0945V3a_pdf.json  0945V3a_pdf.txt  0961V3a_pdf.json  0961V3a_pdf.txt  0977V2a_pdf.json  0977V2a_pdf.txt  0977V2b_pdf.json  0977V2b_pdf.txt  1019V2b_pdf.json  1019V2b_pdf.txt  1022a_pdf.json  1022a_pdf.txt  1022b_pdf.json  1022b_pdf.txt  1025V3a_pdf.json  1025V3a_pdf.txt  1040b_pdf.json  1040b_pdf.txt  1051a_pdf.json  1059b_pdf.json  1059b_pdf.txt  1072a_pdf.json  1086b_pdf.json  1098a_pdf.json  1098a_pdf.txt  1102a_pdf.json  1102a_pdf.txt  1105b_pdf.json  1105b_pdf.txt  1107a_pdf.json  1107a_pdf.txt  1107b_pdf.json  1107b_pdf.txt  1110V2a_pdf.json  1110V2a_pdf.txt  (+51 more)
dataset/txt/: 0879V4a_pdf.txt  1051a_pdf.txt  1072a_pdf.txt  1086b_pdf.txt  Certification_Report_NSCIB-CC-200736-CR.txt  NSCIB-CC-0112113-CR.txt  NSCIB-CC-0145426-ST_rev_C-final.txt  NSCIB-CC-0229287(SSCDkeyImp)-STv1.2.txt  certification-report-nscib-cc-180212-cr2.txt
fuzzing/: CMakeLists.txt  biblio-afl.cpp  bibliography-target.cpp  helper.hpp  revisions-afl.cpp  title-afl.cpp  toc-afl.cpp  versions-afl.cpp
fuzzing/testcases/biblio/: case01.txt  case02.txt  case03.txt
fuzzing/testcases/revisions/: case01.txt  case02.txt  case03.txt  case04.txt  case05.txt  case06.txt  case07.txt
fuzzing/testcases/title/: case01.txt
fuzzing/testcases/toc/: case01.txt
fuzzing/testcases/versions/: case01.txt
src/: CMakeLists.txt  bibliography.hpp  cmd.cpp  cmd.hpp  contents.hpp  main.cpp  parser.cpp  parser.hpp  pprint.cpp  pprint.hpp  revisions.hpp  title.hpp  toc.hpp  types.hpp  utils.hpp  versions.cpp  versions.hpp
test/: CMakeLists.txt  README.md  avg.py  biblio.py  compare.py  compare_all.sh  count.py  output_compare.py  output_compare_verbose.py  parse_all.sh  parse_revs.sh  rev.py  test.sh  tests.cpp  util-test.cpp  verbose_compare.py
